# keechain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  rust.yml
contrib/cross/appimage/: Dockerfile.x86_64-unknown-linux-gnu  entrypoint.sh
contrib/cross/appimage/keechain.AppDir/: keechain.desktop
contrib/cross/appimage/keechain.AppDir/usr/share/metainfo/: keechain.appdata.xml
contrib/cross/cargo/: Dockerfile.x86_64-unknown-linux-gnu
doc/: build-unix.md  build.md  usage.md
doc/release-notes/: release-notes-0.1.0.md  release-notes-0.2.0-wip.md
keechain/: Cargo.toml
keechain-cli/: Cargo.toml
keechain-cli/src/: main.rs  types.rs  util.rs
keechain-cli/src/cli/: io.rs  mod.rs
keechain-cli/src/util/: format.rs  mod.rs
keechain-common/: Cargo.toml  README.md
keechain-common/src/: lib.rs
keechain-core/: Cargo.toml  README.md
keechain-core/src/: descriptors.rs  error.rs  keychain.rs  lib.rs  psbt.rs  types.rs
keechain-core/src/bips/: bip32.rs  bip39.rs  bip43.rs  bip44.rs  bip48.rs  bip85.rs  mod.rs
keechain-core/src/command/: export.rs  mod.rs  psbt.rs  vanity.rs
keechain-core/src/command/advanced/: danger.rs  mod.rs
keechain-core/src/command/setting/: mod.rs
keechain-core/src/crypto/: aes.rs  chacha20.rs  hash.rs  mod.rs
keechain-core/src/export/: bitcoin_core.rs  coldcard.rs  electrum.rs  mod.rs  wasabi.rs
keechain-core/src/nostr/: mod.rs  nip06.rs  nip26.rs
keechain-core/src/slips/: mod.rs  slip132.rs
keechain-core/src/types/: bitcoin_core.rs  descriptors.rs  electrum.rs  keechain.rs  keychain.rs  mod.rs  psbt.rs  seed.rs  wasabi.rs
keechain-core/src/util/: base64.rs  convert.rs  dir.rs  format.rs  hex.rs  mod.rs  serde.rs  time.rs
keechain-core/src/util/bip/: bip32.rs  bip39.rs  bip48.rs  bip85.rs  mod.rs
keechain-core/src/util/slip/: slip132.rs
keechain-ffi/: Cargo.toml  Makefile  build.rs  uniffi.toml
keechain-ffi/bindings-python/: .gitignore  MANIFEST.in  README.md  setup.py
keechain-ffi/bindings-python/examples/: seed.py
keechain-ffi/bindings-python/src/keechain/: __init__.py
keechain-ffi/src/: error.rs  keechain.udl  lib.rs
keechain-ffi/src/bips/: bip39.rs  mod.rs
keechain-ffi/src/types/: keychain.rs  mod.rs  seed.rs
keechain-gui/: Cargo.toml
keechain-gui/src/: lib.rs
keechain-gui/src/component/: heading.rs  identity.rs  input_field.rs  mod.rs
keechain-gui/src/layout/: export.rs  menu.rs  mod.rs  new_keychain.rs  nostr.rs  passphrase.rs  restore.rs  sign.rs  start.rs
keechain-gui/src/layout/advanced/: deterministic_entropy.rs  mod.rs  view_secrets.rs  wipe.rs
keechain-gui/src/layout/advanced/danger/: mod.rs  view_secrets.rs
keechain-gui/src/layout/export/: bitcoin_core.rs  descriptors.rs  electrum.rs  mod.rs
keechain-gui/src/layout/menu/: export.rs  main.rs  mod.rs  other.rs  setting.rs
keechain-gui/src/layout/menu/advanced/: danger.rs  mod.rs
keechain-gui/src/layout/nostr/: sign_delegation.rs
keechain-gui/src/layout/setting/: change_password.rs  rename.rs
keechain/src/: constants.rs  main.rs
keechain/src/app/: context.rs  message.rs  mod.rs
keechain/src/app/component/dashboard/: mod.rs  navbar.rs
keechain/src/app/component/dashboard/sidebar/: button.rs  mod.rs
keechain/src/app/screen/: home.rs  mod.rs  sign.rs
keechain/src/cli/: mod.rs
keechain/src/component/: button.rs  error.rs  heading.rs  icon.rs  identity.rs  input_field.rs  mnemonic.rs  mod.rs  numeric_input.rs  read_only_field.rs  rule.rs  text.rs  text_input.rs  version.rs  view.rs
keechain/src/gui/: mod.rs
keechain/src/gui/component/: button.rs  mod.rs
keechain/src/gui/layout/: export.rs  menu.rs  mod.rs  new_keychain.rs  passphrase.rs  restore.rs  sign.rs  start.rs
keechain/src/layout/: mod.rs  new_keychain.rs  passphrase.rs  restore.rs  sign.rs  start.rs
keechain/src/layout/advanced/: deterministic_entropy.rs  mod.rs
keechain/src/layout/advanced/danger/: mod.rs  view_secrets.rs  wipe.rs
keechain/src/layout/export/: bitcoin_core.rs  descriptors.rs  electrum.rs  mod.rs
keechain/src/layout/menu/: export.rs  main.rs  mod.rs  nostr.rs  setting.rs
keechain/src/layout/menu/advanced/: danger.rs  mod.rs
keechain/src/layout/nostr/: keys.rs  mod.rs  sign_delegation.rs
keechain/src/layout/setting/: change_password.rs  mod.rs  rename.rs
keechain/src/start/: context.rs  message.rs  mod.rs
keechain/src/start/screen/: generate.rs  mod.rs  open.rs  restore.rs
keechain/src/theme/: color.rs  font.rs  icon.rs  mod.rs
src/: cli.rs  command.rs  main.rs  types.rs
src/cli/: io.rs  mod.rs
src/command/: danger.rs  export.rs  mod.rs
src/command/advanced/: danger.rs  mod.rs
src/command/setting/: mod.rs
src/core/: mod.rs  types.rs
src/core/command/: export.rs  mod.rs  psbt.rs
src/core/command/advanced/: danger.rs  mod.rs
src/core/command/setting/: mod.rs
src/core/crypto/: mod.rs
src/core/util/: aes.rs  mod.rs
src/core/util/bip/: bip32.rs  bip85.rs
src/core/util/slip/: slip132.rs
src/gui/: mod.rs
src/gui/component/: button.rs  heading.rs  input_field.rs  mod.rs  version.rs
src/gui/layout/: menu.rs  mod.rs  new_keychain.rs  open.rs  restore.rs  sign.rs  start.rs
src/gui/theme/: color.rs  mod.rs
src/util/: aes.rs  convert.rs  dir.rs  hash.rs  io.rs  mod.rs  time.rs
src/util/bip/: bip32.rs  bip85.rs  mod.rs
src/util/slip/: mod.rs  slip132.rs
