[package]
name = "keechain"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT signer, descriptor exporter and more for offline devices."
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "signer", "psbt", "offline", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.64"

[features]
default = []
gui = ["dep:eframe", "dep:egui_extras", "dep:image"]

[dependencies]
aes = "0.8.2"
anyhow = "1.0.66"
base64 = "0.13.1"
bdk = { version = "0.24.0", default-features = false, features = ["keys-bip39"] }
bitcoin = "0.29.2"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
dirs = "4.0.0"
env_logger = "0.9.0"
log = "0.4.17"
num-format = "0.4.3"
prettytable-rs = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_hc = "0.3.1"
secp256k1 = "0.24.1"
serde = "1.0.147"
serde_json = "1.0.74"
sha2 = "0.10.1"
sysinfo = "0.26.8"
thiserror = "1.0.37"

# GUI dependencies
eframe = { version = "0.19.0", optional = true }
egui_extras = { version = "0.19.0", features = ["image"], optional = true }
image = { version = "0.24.5", default-features = false, features = ["png"], optional = true }

[profile.release]
lto = true
codegen-units = 1
