[package]
name = "keechain"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT signer, descriptor exporter and more for offline devices."
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "signer", "psbt", "offline", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.64"

[features]
default = []
gui = ["dep:eframe", "dep:egui_extras", "dep:image", "dep:rfd"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
env_logger = "0.9.0"
keechain-core = { path = "./keechain-core" }
num-format = "0.4.3"
prettytable-rs = "0.9.0"

# GUI dependencies
eframe = { version = "0.19.0", optional = true }
egui_extras = { version = "0.19.0", features = ["image"], optional = true }
image = { version = "0.24.5", default-features = false, features = ["png"], optional = true }
rfd = { version = "0.10.0", optional = true }

[profile.release]
lto = true
codegen-units = 1
