[package]
name = "keechain-cli"
version.workspace = true
edition = "2021"
description.workspace = true
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]
rust-version.workspace = true

[features]
default = []
nostr = ["keechain-core/nostr"]

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
console = "0.15.2"
dialoguer = "0.10.2"
env_logger = "0.9.0"
keechain-core = { path = "../keechain-core" }
