[package]
name = "keechain-cli"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT signer, descriptor exporter and more for offline devices."
authors = ["Yuki Kishimoto <yukikishimoto@protonmain.com>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "../README.md"
keywords = ["bitcoin", "signer", "psbt", "offline"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
console = "0.15.4"
dialoguer = "0.10.2"
keechain-common = { version = "0.1", path = "../keechain-common" }
keechain-core = { version = "0.1", path = "../keechain-core" }
prettytable-rs = "0.10"
