[package]
name = "keechain-core"
version.workspace = true
edition = "2021"
description = "KeeChain Core library."
authors = ["Yuki Kishimoto <yukikishimoto@protonmain.com>"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
rust-version.workspace = true

[features]
default = ["sysinfo"]

[dependencies]
aes = "0.8"
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "d6bcd9b725a63b5db9157fb11a827a472ddcf73d", default-features = false, features = ["std"] }
bip39 = "2.0"
cbc = { version = "0.1", features = ["alloc"] }
rand_chacha = "0.3"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
sysinfo = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }