[package]
name = "keechain-core"
version = "0.1.0"
edition = "2021"
description = "KeeChain Core library."
authors = ["Yuki Kishimoto <yukikishimoto@protonmain.com>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
keywords = ["bitcoin", "signer", "psbt", "offline"]
rust-version = "1.60.0"

[features]
default = ["sysinfo"]

[dependencies]
aes = "0.8"
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "d6bcd9b725a63b5db9157fb11a827a472ddcf73d", default-features = false, features = ["std"] }
bip39 = "2.0"
cbc = { version = "0.1", features = ["alloc"] }
chacha20poly1305 = "0.10"
rand_chacha = "0.3"
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
sysinfo = { version = "0.28", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }