[package]
name = "keechain-core"
version = "0.1.0"
edition = "2021"
description = "KeeChain Core library."
authors = ["Yuki Kishimoto <yukikishimoto@protonmain.com>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
keywords = ["bitcoin", "signer", "psbt", "offline"]
rust-version = "1.60.0"

[features]
default = ["sysinfo"]

[dependencies]
aes = "0.8"
bdk = { git = "https://github.com/bitcoindevkit/bdk", rev = "3fdab87ee7c02439b18a9e114ff588b282525402", default-features = false, features = ["std"] }
bip39 = { version = "2.0", default-features = false, features = ["std", "zeroize"] }
cbc = { version = "0.1", features = ["alloc"] }
chacha20poly1305 = "0.10"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.5", features = ["derive"] } # bip39 uses version 1.5

[target.'cfg(not(target_vendor = "apple"))'.dependencies]
sysinfo = { version = "0.29", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }