[package]
name = "keechain-ffi"
version = "0.1.0"
edition = "2021"
description = "Keechain Core FFI."

[lib]
name = "keechain_ffi"
crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
keechain-core = { path = "../keechain-core" }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "e20b9c2b72144ef51a381c6b321ac810a4fbfdbe", features = ["cli"] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "e20b9c2b72144ef51a381c6b321ac810a4fbfdbe", features = ["build"] }
