[package]
name = "keechain-ffi"
version = "0.1.0"
edition = "2021"
description = "Keechain Core FFI."

[lib]
name = "keechain_ffi"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
keechain-core = { path = "../keechain-core" }
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "cae8edc45ba5b56bfcbf35b60c1ab6a97d1bf9da", features = ["cli"] }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "cae8edc45ba5b56bfcbf35b60c1ab6a97d1bf9da", features = ["build"] }
