[package]
name = "keechain-gui"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "README.md"
keywords = ["bitcoin", "signer", "psbt", "offline", "gui"]
categories = ["GUI"]
rust-version = "1.65.0"

[features]
default = []
nostr = ["keechain-core/nostr"]

[dependencies]
copypasta = "0.8.1"
eframe = "0.20.1"
egui_extras = { version = "0.20.0", features = ["image"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
keechain-core = { path = "../keechain-core" }
rfd = "0.10.0"
