[package]
name = "keechain"
version.workspace = true
edition = "2021"
description.workspace = true
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories = ["gui"]
rust-version.workspace = true

[features]
default = []
nostr = ["keechain-core/nostr"]

[dependencies]
eframe = "0.20.1"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
keechain-common = { version = "0.1", path = "../keechain-common" }
keechain-core = { version = "0.1", path = "../keechain-core" }
rfd = "0.10.0"
once_cell = "1"
