[package]
name = "keechain"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT signer, descriptor exporter and more for offline devices."
authors = ["Yuki Kishimoto <yukikishimoto@protonmain.com>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "../README.md"
keywords = ["bitcoin", "signer", "psbt", "offline"]
categories = ["gui"]

[dependencies]
eframe = "0.24"
egui_extras = { version = "0.21", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
keechain-common = { version = "0.1", path = "../keechain-common" }
keechain-core = { version = "0.1", path = "../keechain-core" }
rfd = "0.12"
once_cell = "1.18"
