[package]
name = "keechain"
version = "0.1.0"
edition = "2021"
description = "Bitcoin PSBT signer, descriptor exporter and more for offline devices."
authors = ["Yuki Kishimoto <yukikishimoto@protonmail.com>"]
homepage = "https://github.com/yukibtc/keechain"
repository = "https://github.com/yukibtc/keechain.git"
license = "MIT"
readme = "../README.md"
keywords = ["bitcoin", "signer", "psbt", "offline"]
categories = ["gui"]

[dependencies]
iced = { git = "https://github.com/yukibtc/iced", rev = "c7a9f1024a8858d8581dfba144ca3a52a34de032", default-features = false, features = ["lazy", "wgpu"] }
keechain-common = { version = "0.1", path = "../keechain-common" }
keechain-core = { version = "0.1", path = "../keechain-core" }
rfd = "0.12"
once_cell = "1.19"
thiserror = "1.0"
